# cjapy

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
cjapy/: __init__.py  __version__.py  cjapy.py  config.py  configs.py  connector.py  projects.py  requestCreator.py  token_provider.py  workspace.py
docs/: authenticating_without_config_json.md  cja.md  getting_started.md  logging.md  main.md  projects.md  releases.md  requestCreator.md  workspace.md
